--- a/algamoney-web/src/app/app.component.html
+++ b/algamoney-web/src/app/app.component.html
@@ -1,7 +1,11 @@
 <app-navbar></app-navbar>
+
+<app-lancamento-cadastro></app-lancamento-cadastro>
+
 <!--
 <app-pessoas-pesquisa></app-pessoas-pesquisa>
+<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
 -->
 
-<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
+
 
