--- a/algamoney-web/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/algamoney-web/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form action="">
+  <form autocomplete="off">
     <div class="ui-g">
 
       <div class="ui-g-12">
@@ -15,8 +15,8 @@
         <p-calendar dateFormat="dd/mm/yy"
           [inline]="false"
           [readonlyInput]="false"
-          [showIcon]="false">
-        </p-calendar>
+          [showIcon]="false"
+        ></p-calendar>
       </div>
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
@@ -26,7 +26,23 @@
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Descrição</label>
-        <input pInputText type="text">
+        <input type="text"
+          pInputText
+          name="descricao"
+          ngModel
+          #descricao="ngModel"
+          required
+          minlength="5"
+        >
+
+        <div *ngIf="descricao.hasError('required') && descricao.dirty"
+          class="ui-message ui-messages-error">
+          Informe uma descrição
+        </div>
+        <div *ngIf="descricao.hasError('minlength') && descricao.dirty"
+          class="ui-message ui-messages-error">
+          Mínimo de {{ descricao.errors.minlength.requiredLength }} caracteres.
+        </div>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
@@ -36,6 +52,8 @@
           placeholder="0,00"
           currencyMask
           [options]="{ prefix:'', thousands:'.', decimal:',', allowNegative: false }"
+          ngModel
+          name="valor"
         >
       </div>
 
