--- a/algamoney-web/src/app/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/algamoney-web/src/app/pessoa-cadastro/pessoa-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form action="">
+  <form #f="ngForm" autocomplete="off">
     <div class="ui-g">
 
       <div class="ui-g-12">
@@ -8,48 +8,86 @@
 
       <div class="ui-g-12 ui-fluid">
         <label>Nome</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="nome" ngModel #nome="ngModel"
+          required
+          minlength="5"
+        >
+
+        <app-message [control]="nome" error="required"
+          text="Informe o nome"
+        ></app-message>
+        <app-message [control]="nome" error="minlength"
+          text="Mínimo de {{ nome.errors?.minlength?.requiredLength }} caracteres."
+        ></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Logradouro</label>
-        <input pInputText type="text">
+        <input pInputText type="text" ngModel name="logradouro" #logradouro="ngModel" required>
+
+        <app-message [control]="logradouro" error="required"
+          text="Informe o logradouro"
+        ></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Número</label>
-        <input pInputText type="text">
+        <input pInputText type="text" ngModel name="numero" #numero="ngModel" required>
+
+        <app-message [control]="numero" error="required"
+          text="Informe o numero"
+        ></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Complemento</label>
-        <input pInputText type="text">
+        <input pInputText type="text" ngModel name="complemento" #complemento="ngModel">
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Bairro</label>
-        <input pInputText type="text">
+        <input pInputText type="text" ngModel name="bairro" #bairro="ngModel" required>
+
+        <app-message [control]="bairro" error="required"
+          text="Informe o bairro"
+        ></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>CEP</label>
         <p-inputMask
           mask="99.999-999"
+          ngModel
+          name="cep"
+          #cep="ngModel"
+          required
         ></p-inputMask>
+
+        <app-message [control]="cep" error="required"
+          text="Informe o CEP"
+        ></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Cidade</label>
-        <input pInputText type="text">
+        <input pInputText type="text" ngModel name="cidade" #cidade="ngModel" required>
+
+        <app-message [control]="cidade" error="required"
+          text="Informe a cidade"
+        ></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Estado</label>
-        <input pInputText type="text">
+        <input pInputText type="text" ngModel name="estado" #estado="ngModel" required>
+
+        <app-message [control]="estado" error="required"
+          text="Informe o estado"
+        ></app-message>
       </div>
 
       <div class="ui-g-12">
-        <button pButton tyupe="submit" label="Salvar"></button>
+        <button pButton tyupe="submit" label="Salvar" [disabled]="f.invalid"></button>
         <button pButton tyupe="button" label="Novo" class="ui-button-info"></button>
         <a href="javascript:;">Voltar para a pesquisa</a>
       </div>
