--- a/algamoney-web/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/algamoney-web/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -1,12 +1,15 @@
 <div class="ui-g container">
 
+  <form autocomplete="off" (ngSubmit)="pesquisar()">
+
     <div class="ui-g-12">
       <h1>Lançamentos</h1>
     </div>
 
     <div class="ui-g-12 ui-fluid">
       <label>Descrição</label>
-      <input pInputText type="text">
+      <input pInputText type="text" name="descricao"
+      [(ngModel)]="descricao">
     </div>
 
     <div class="ui-g-12">
@@ -21,10 +24,12 @@
       <button pButton type="submit" label="Pesquisar"></button>
     </div>
 
-    <app-lancamentos-grid [lancamentos]="lancamentos"></app-lancamentos-grid>
+  </form>
 
-    <div class="ui-g-12">
-      <a pButton label="Novo Lançamento"></a>
-    </div>
+  <app-lancamentos-grid [lancamentos]="lancamentos"></app-lancamentos-grid>
+
+  <div class="ui-g-12">
+    <a pButton label="Novo Lançamento"></a>
+  </div>
 
   </div>
