--- a/algamoney-web/src/app/lancamentos/lancamentos-grid/lancamentos-grid.component.html
+++ b/algamoney-web/src/app/lancamentos/lancamentos-grid/lancamentos-grid.component.html
@@ -1,6 +1,7 @@
 <div class="ui-g">
   <div class="ui-g-12">
-    <p-dataTable [value]="lancamentos" [paginator]="true" [rows]="5" [responsive]="true">
+    <p-dataTable [value]="lancamentos" [paginator]="true" [rows]="5" [responsive]="true"
+        emptyMessage="Nenhum lançamento encontrado">
       <p-column field="pessoa" header="Pessoa"></p-column>
       <p-column field="descricao" header="Descrição"></p-column>
       <p-column field="dataVencimento" header="Vencimento" styleClass="col-data">
