--- a/algamoney-web/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/algamoney-web/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -34,7 +34,8 @@
           emptyMessage="Nenhum lançamento encontrado"
           [paginator]="true" [rows]="filtro.itensPorPagina"
           [lazy]="true" [totalRecords]="totalRegistros"
-          (onLazyLoad)="aoMudarPagina($event)">
+          (onLazyLoad)="aoMudarPagina($event)"
+          #tabela>
         <p-column field="pessoa" header="Pessoa"></p-column>
         <p-column field="descricao" header="Descrição"></p-column>
         <p-column field="dataVencimento" header="Vencimento" styleClass="col-data">
@@ -53,9 +54,11 @@
           </ng-template>
         </p-column>
         <p-column styleClass="col-acoes">
-          <ng-template pTemplate="body">
+          <ng-template let-lanc="rowData" pTemplate="body">
             <a pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-            <button pButton icon="fa-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+            <button pButton icon="fa-trash"
+              pTooltip="Excluir" tooltipPosition="top"
+              (click)="excluir(lanc)"></button>
           </ng-template>
         </p-column>
       </p-dataTable>
