--- a/algamoney-web/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/algamoney-web/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,124 +1,82 @@
 <div class="container">
-  <form #f="ngForm" autocomplete="off">
-    <div class="ui-g">
+  <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
 
+    <div class="ui-g">
       <div class="ui-g-12">
         <h1>Novo Lançamento</h1>
       </div>
 
       <div class="ui-g-12">
-        <p-selectButton [options]="tipos"
-          ngModel
-          name="tipo"
-          #tipo="ngModel"
-        ></p-selectButton>
+        <p-selectButton name="tipo" [options]="tipos"
+          [(ngModel)]="lancamento.tipo"
+          #tipo></p-selectButton>
       </div>
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>Vencimento</label>
-        <p-calendar dateFormat="dd/mm/yy"
-          [inline]="false"
-          [readonlyInput]="false"
-          [showIcon]="false"
-          ngModel
-          name="vencimento"
-          #vencimento="ngModel"
-          required
-        ></p-calendar>
+        <p-calendar name="vencimento" dateFormat="dd/mm/yy"
+          [inline]="false" [readonlyInput]="false" [showIcon]="false"
+          [(ngModel)]="lancamento.dataVencimento"
+          #vencimento="ngModel" required></p-calendar>
 
         <app-message [control]="vencimento" error="required"
-          text="Informe uma data de vencimento"
-        ></app-message>
+          text="Informe uma data de vencimento"></app-message>
       </div>
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
-        <p-calendar dateFormat="dd/mm/yy"
-          ngModel
-          name="pagamento"
-          #pagamento="ngModel"
-        ></p-calendar>
+        <p-calendar dateFormat="dd/mm/yy" name="dataPagamento"
+          [(ngModel)]="lancamento.dataPagamento"></p-calendar>
       </div>
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Descrição</label>
-        <input type="text"
-          pInputText
-          name="descricao"
-          ngModel
-          #descricao="ngModel"
-          required
-          minlength="5"
-        >
+        <input pInputText type="text" name="descricao"
+          [(ngModel)]="lancamento.descricao"
+          #descricao="ngModel" required minlength="5">
 
         <app-message [control]="descricao" error="required"
-          text="Informe uma descrição"
-        ></app-message>
+          text="Informe a descrição"></app-message>
         <app-message [control]="descricao" error="minlength"
-          text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres."
-        ></app-message>
+          text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Valor</label>
-        <input
-          pInputText type="text"
-          placeholder="0,00"
-          currencyMask
-          [options]="{ prefix:'', thousands:'.', decimal:',', allowNegative: false }"
-          ngModel
-          name="valor"
-          #valor="ngModel"
-          required
-        >
-
-        <app-message [control]="descricao" error="required"
-          text="Informe um valor"
-        ></app-message>
+        <input pInputText type="text" name="valor" placeholder="0,00"
+          currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',', allowNegative: false }"
+          [(ngModel)]="lancamento.valor"
+          required>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Categoria</label>
-        <p-dropdown
-          [options]="categorias"
-          [autoWidth]="false"
-          placeholder="Selecione"
-          ngModel
-          name="categoria"
-          #categoria="ngModel"
-          required
-        ></p-dropdown>
+        <p-dropdown name="categoria" [options]="categorias"
+          placeholder="Selecione" [autoWidth]="false"
+          [(ngModel)]="lancamento.categoria.codigo"
+          required></p-dropdown>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Pessoa</label>
-        <p-dropdown
-          [options]="pessoas"
-          [autoWidth]="false"
-          placeholder="Selecione"
-          [filter]="true"
-          ngModel
-          name="pessoa"
-          #pessoa="ngModel"
-          required
-        ></p-dropdown>
+        <p-dropdown name="pessoa" [options]="pessoas" placeholder="Selecione"
+          [autoWidth]="false" [filter]="true"
+          [(ngModel)]="lancamento.pessoa.codigo"
+          required></p-dropdown>
       </div>
 
       <div class="ui-g-12 ui-fluid">
         <label>Observação</label>
-        <textarea pInputTextarea rows="3"
-          ngModel
-          name="observacao"
-          #observacao="ngModel"
-        ></textarea>
+        <textarea pInputTextarea rows="3" name="observacao"
+          [(ngModel)]="lancamento.observacao"></textarea>
       </div>
 
       <div class="ui-g-12">
-        <button pButton tyupe="submit" label="Salvar" [disabled]="f.invalid"></button>
-        <button pButton tyupe="button" label="Novo" class="ui-button-info"></button>
+        <button pButton type="submit" label="Salvar" [disabled]="f.invalid"></button>
+        <button pButton type="button" label="Novo" class="ui-button-info"></button>
         <a href="javascript:;">Voltar para a pesquisa</a>
       </div>
-
     </div>
+
   </form>
 </div>
