--- a/algamoney-web/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/algamoney-web/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -67,7 +67,7 @@
 
 
   <div class="ui-g-12">
-    <a pButton label="Novo Lançamento"></a>
+    <a pButton label="Novo Lançamento" routerLink="/lancamentos/novo"></a>
   </div>
 
   </div>
