--- a/algamoney-web/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/algamoney-web/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -42,7 +42,8 @@
           </p-column>
           <p-column styleClass="col-acoes">
             <ng-template let-pes="rowData" pTemplate="body">
-              <a pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+              <a pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top"
+                [routerLink]="['/pessoas', pes.codigo]"></a>
               <button pButton icon="fa-trash"
                 pTooltip="Excluir" tooltipPosition="top"
                 (click)="confirmarExclusao(pes)"></button>
@@ -52,7 +53,7 @@
     </div>
 
     <div class="ui-g-12">
-      <a pButton label="Nova Pessoa"></a>
+      <a pButton label="Nova Pessoa" routerLink="/pessoas/novo"></a>
     </div>
   </div>
 
